@startuml

title __LOGIC's Class Diagram__\n

    namespace logic {
      class logic.GameLogic {
          - consecutiveGhosts : int
          - gameOverString : String
          - ghosts : ArrayList<Ghost>
          - highScoreString : String
          - inGame : boolean
          - level : int
          - levelString : String
          - lifeCounter : int
          - livesNumString : String
          - pacmanDead : boolean
          - pacmanStart : boolean
          - readyString : String
          - startTime : long
          - timer : Timer
          + GameLogic()
          + doOneLoop()
          + getGameOverString()
          + getGhosts()
          + getHighScoreString()
          + getLevelString()
          + getLives()
          + getLivesNumString()
          + getPacman()
          + getPoints()
          + getReadyString()
          + keyPressed()
          + makeGameOver()
          + pauseGame()
          + playBackgroundMusic()
          + restartApplication()
          + resumeGame()
          + checkCollision()
          - endGame()
          - getExtraLife()
          - killPacman()
          - restartLevel()
          - update()
      }

      class logic.MainFrameLogic {
          + MainFrameLogic()
          + readHighScore()
          + registerFont()
          + writeHighScore()
      }

      class logic.MenuLogic {
          - mazesNumber : int
          + MenuLogic()
          + populateMazeStrings()
          - loadMazes()
      }
  

  logic.GameLogic o-- ui.GameMainFrame : frame
  logic.GameLogic o-- ui.GamePanel : gamePanel
  logic.GameLogic o-- sprites.Pacman : pacman
  logic.GameLogic o-- sprites.Ghost : ghosts
  logic.MainFrameLogic o-- ui.GameMainFrame : frame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
